fixed scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ text {
 .svg-container-view5 {
     position: relative;
 	width: 100%;
-    padding-bottom: 100%; /* aspect ratio */
     vertical-align: top;
     overflow: visible;
 }
